syntax = "proto3";

package bytebase.store;

import "store/common.proto";

option go_package = "generated-go/store";

message ChangelogPayload {
  // Format: projects/{project}/rollouts/{rollout}/stages/{stage}/tasks/{task}/taskruns/{taskrun}
  string task_run = 1;
  // Format: projects/{project}/issues/{issue}
  string issue = 2;

  // The revision uid.
  // optional
  int64 revision = 3;

  ChangedResources changed_resources = 4;

  // The sheet that holds the content.
  // Format: projects/{project}/sheets/{sheet}
  string sheet = 5;

  string version = 6;

  enum Type {
    TYPE_UNSPECIFIED = 0;
    BASELINE = 1;
    MIGRATE = 2;
    SDL = 3;
  }
  Type type = 7;

  string git_commit = 8;

  // MigrationType is the type for imperative schema migration.
  enum MigrationType {
    MIGRATION_TYPE_UNSPECIFIED = 0;
    // Used for DDL changes.
    DDL = 1;
    // Used for DML changes.
    DML = 2;
    // Used for DDL changes using gh-ost.
    GHOST = 3;
  }
  MigrationType migration_type = 9;
}

message ChangedResources {
  repeated ChangedResourceDatabase databases = 1;
}

message ChangedResourceDatabase {
  string name = 1;

  repeated ChangedResourceSchema schemas = 2;
}

message ChangedResourceSchema {
  string name = 1;

  repeated ChangedResourceTable tables = 2;

  repeated ChangedResourceView views = 3;

  repeated ChangedResourceFunction functions = 4;

  repeated ChangedResourceProcedure procedures = 5;
}

message ChangedResourceTable {
  string name = 1;

  // The estimated row count of the table.
  int64 table_rows = 2;

  // The ranges of substrings correspond to the statements on the sheet.
  repeated Range ranges = 3;
}

message ChangedResourceView {
  string name = 1;

  // The ranges of substrings correspond to the statements on the sheet.
  repeated Range ranges = 2;
}

message ChangedResourceFunction {
  string name = 1;

  // The ranges of substrings correspond to the statements on the sheet.
  repeated Range ranges = 2;
}

message ChangedResourceProcedure {
  string name = 1;

  // The ranges of substrings correspond to the statements on the sheet.
  repeated Range ranges = 2;
}
